[gd_scene load_steps=11 format=2]

[ext_resource path="res://LifeTimer.tscn" type="PackedScene" id=2]
[ext_resource path="res://cast/orb/OrbProjectile.gd" type="Script" id=3]
[ext_resource path="res://assets/circle_256.png" type="Texture" id=4]
[ext_resource path="res://cast/orb/OrbParticles.tres" type="Material" id=6]
[ext_resource path="res://assets/orb_particle256.png" type="Texture" id=7]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.5, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 8

[sub_resource type="CircleShape2D" id=4]
radius = 8.0

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("FX:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[node name="OrbProjectile" type="Area2D"]
pause_mode = 1
input_pickable = false
monitorable = false
collision_mask = 0
script = ExtResource( 3 )

[node name="StepTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.143
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 4, 0 )
scale = Vector2( 1.6, 1.6 )

[node name="LifeTimer" parent="." instance=ExtResource( 2 )]

[node name="Vel" type="Label" parent="."]
margin_left = -21.0
margin_top = -19.0
margin_right = 19.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnHit" type="Node" parent="."]

[node name="FX" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="FX"]
visible = false
self_modulate = Color( 1.2, 1.2, 1.2, 1 )
material = SubResource( 1 )
position = Vector2( 8, 0 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 4 )

[node name="Particles2D" type="Particles2D" parent="FX"]
position = Vector2( 4, 0 )
emitting = false
amount = 5
lifetime = 0.5
randomness = 1.0
process_material = ExtResource( 6 )
texture = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="FX"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 4.0
texture = SubResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="FX"]
self_modulate = Color( 1, 1.1, 1, 1 )
margin_top = -8.0
margin_right = 16.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 0 )
shape = SubResource( 4 )

[node name="LeftEdge" type="RayCast2D" parent="."]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 16, 0 )
collide_with_areas = true

[node name="RightEdge" type="RayCast2D" parent="."]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( 16, 0 )
collide_with_areas = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 5 )

[connection signal="body_shape_entered" from="." to="." method="_on_Cast_body_shape_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
